--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,19 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.17.0</version>
+            <version>2.17.1</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>su.nexmedia</groupId>-->
+<!--            <artifactId>NexEngine</artifactId>-->
+<!--            <version>2.2.12</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>su.nexmedia</groupId>
             <artifactId>NexEngine</artifactId>
             <version>2.2.12</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../NexEngine-spigot/NexEngine.jar</systemPath>
         </dependency>
     </dependencies>
 
